--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.2.2
   video_player: ^2.9.1
   provider: ^6.1.2
+  whitecodel_reels: ^0.0.6
 
 dev_dependencies:
   flutter_test:
